--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,6 @@ dependencies {
 
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
-    implementation 'com.squareup.picasso:picasso:2.8'
-
     implementation ("com.squareup.retrofit2:retrofit:2.9.0")
     implementation ("com.squareup.retrofit2:converter-gson:2.9.0")
     implementation ("com.squareup.okhttp3:okhttp:4.9.2")
@@ -54,4 +52,6 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:1.5.4"
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
